--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      Digital Marketing Experts
+                      Custom Web Application Development Services
                     </h1>
                     <p>
-                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
+                      If your business recognizes the importance of a strong online presence but lacks the internal resources or know-how to create a tailored solution, our team of skilled web developers is here to help. We understand that your focus is on managing your company, not on designing websites. Without an effective web platform, there's a risk of lagging behind competitors and missing out on valuable opportunities. Let us take care of your web development needs so you can stay ahead in the competitive landscape.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -170,6 +170,15 @@
       <div class="heading_container">
         <h2>
           Our Services
+
+
+
+personalized solutions
+full-development cycle
+integration of features
+customization and updates
+
+          
         </h2>
         <p>
           consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -183,10 +192,14 @@
             </div>
             <div class="detail-box">
               <h5>
-                Link Building
+                Custom web application development
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                We can provide you with custom online software in case you want something more than just a website. Our experts offer:
+                <br>personalized solutions
+                    ✓full-development cycle
+                    ✓integration of features
+                    ✓customization and updates      
               </p>
               <a href="">
                 <span>
