--- a/index.html
+++ b/index.html
@@ -170,14 +170,6 @@
       <div class="heading_container">
         <h2>
           Our Services
-
-
-
-personalized solutions
-full-development cycle
-integration of features
-customization and updates
-
           
         </h2>
         <p>
@@ -196,10 +188,10 @@ customization and updates
               </h5>
               <p>
                 We can provide you with custom online software in case you want something more than just a website. Our experts offer:
-                <br>personalized solutions
-                    ✓full-development cycle
-                    ✓integration of features
-                    ✓customization and updates      
+                <br>personalized solutions <br>
+                    ✓full-development cycle <br>
+                    ✓integration of features <br>
+                    ✓customization and updates <br>    
               </p>
               <a href="">
                 <span>
