--- a/about.html
+++ b/about.html
@@ -8,11 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="keywords" content="SEO,Web development companies, , Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
+  <meta name="description" content="Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
+" />
   <meta name="author" content="" />
 
-  <title>Digian</title>
+  <title>Web Development & SEO | Knewton Alta Developer</title>
 
 
   <!-- bootstrap core css -->
@@ -85,10 +86,7 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+            Knewton Alta Developer was founded in 2018 and since then we provide top-notch Web Development And SEO solutions to clients all over the world. With years of experience in the industry, we have helped many businesses grow and achieve their goals by Providing cutting-edge and scalable Web solutions. <br> Explore our comprehensive Web Development & SEO services to enhance your online presence. Our expert team combines top-notch web development skills with effective SEO strategies, ensuring your website not only looks impressive but also ranks high on search engines. Whether you need a new website or want to optimize your existing one, we've got you covered. Elevate your digital presence and stay ahead in the competitive online landscape with our integrated Web Development & SEO solutions
             </p>
             <a href="">
               Read More
@@ -116,10 +114,10 @@
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
               <h4>
-                Digian
+                Web Development & SEO Service
               </h4>
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Explore our comprehensive Web Development & SEO services to enhance your online presence. Our expert team combines top-notch web development skills with effective SEO strategies, ensuring your website not only looks impressive but also ranks high on search engines. Whether you need a new website or want to optimize your existing one, we've got you covered. Elevate your digital presence and stay ahead in the competitive online landscape with our integrated Web Development & SEO solutions
               </p>
             </div>
           </div>
