--- a/about.html
+++ b/about.html
@@ -204,8 +204,8 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved By Knewton Developer
+          
         </p>
       </div>
     </footer>
