--- a/index.html
+++ b/index.html
@@ -286,12 +286,9 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              Knewton Alta Developer was founded in 2018 and since then we provide top-notch Web Development And SEO solutions to clients all over the world. With years of experience in the industry, we have helped many businesses grow and achieve their goals by Providing cutting-edge and scalable Web solutions
             </p>
-            <a href="">
+            <a href="/about.html">
               Read More
             </a>
           </div>
@@ -549,10 +546,10 @@
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
               <h4>
-                Digian
+                Knewton Alta Developer
               </h4>
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
             </div>
           </div>
