--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                 Web Development & SEO Service
               </h4>
               <p>
-                Explore our comprehensive Web Development & SEO services to enhance your online presence. Our expert team combines top-notch web development skills with effective SEO strategies, ensuring your website not only looks impressive but also ranks high on search engines. Whether you need a new website or want to optimize your existing one, we've got you covered. Elevate your digital presence and stay ahead in the competitive online landscape with our integrated Web Development & SEO solutions
+                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
             </div>
           </div>
