--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
+              <p>At the core of our mission lies one simple goal: Happy Clients. We dedicate ourselves to surpassing expectations, ensuring your satisfaction is the ultimate measure of our success. From innovative web development to effective SEO strategies, we strive to create solutions that not only meet your needs but leave you delighted. Your happiness is not just our aim; it's our commitment, driving us to deliver excellence in every aspect of our services. Join a community of content and satisfied clients, as we work passionately to elevate your digital presence and ensure your success in the ever-evolving online landscape.</p>
               <h2>
                 About Us
               </h2>
