--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+ <meta name="keywords" content="SEO,Web development companies, , Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
+  <meta name="description" content="Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
   <meta name="author" content="" />
 
   <title>Web Development & SEO | Knewton Alta Developer</title>
