--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Digian</title>
+  <title>Contact Us | Knewton Alta Developer</title>
 
 
   <!-- bootstrap core css -->
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Digian
+              Knewton Alta Developer
             </span>
           </a>
 
@@ -127,10 +127,10 @@
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
               <h4>
-                Digian
+                Knewton Alta Developer
               </h4>
               <p>
-                Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+                Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates
               </p>
             </div>
           </div>
