--- a/contact.html
+++ b/contact.html
@@ -217,8 +217,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved By Knewton Developer
         </p>
       </div>
     </footer>
