--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>Web Development & SEO | Knewton Alta Developer</title>
-
+<link rel="icon" type="images/x-icon" href="images/favicon.png" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -40,7 +40,7 @@
               Knewton Alta Developer
             </span>
           </a>
-
+<img src="headlogo.png" alt="Knewton Alta Developer Banner">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
           </button>
@@ -105,7 +105,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/seo-slider.png" alt="SEO Banner Knewton Alta Developer">
                   </div>
                 </div>
                 <div class="col-md-6">
