--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               Knewton Alta Developer
             </span>
           </a>
-<img src="images/headlogo.png" alt="Knewton Alta Developer Banner">
+<img src="images/logo.png" alt="Knewton Alta Developer Banner">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
           </button>
