--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>
-              Knewton Alta Developer
-            </span>
-          </a>
+           </a>
 <img src="images/logo.png" alt="Knewton Alta Developer Banner">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
@@ -111,10 +108,10 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      Digital Marketing Experts
+                      SEO – Search Engine Optimization
                     </h1>
                     <p>
-                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
+                      Having your website rank high on the most popular search engines will drive your sales. We’ll create your website with all of the key features of SEO (Search Engine Optimization) such as lots of shareable content, right title tags, clickable headlines, subheadings, meta descriptions, and other elements that will push your website higher than that of the competition!
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
