--- a/index.html
+++ b/index.html
@@ -542,9 +542,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
-              <h4>
-                Knewton Alta Developer
-              </h4>
+           <img src="images/logo.png" alt="Knewton Alta Developer Banner">
               <p>
                 Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
