--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <meta name="author" content="" />
 
   <title>Web Development & SEO | Knewton Alta Developer</title>
-
+<link rel="icon" type="images/x-icon" href="images/favicon.png" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -37,9 +37,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>
-              Knewton Alta Developer
-            </span>
+     <img src="images/logo.png" alt="Knewton Alta Developer Banner">
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -116,9 +114,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 ">
             <div class="info_detail">
-              <h4>
-                Web Development & SEO Service
-              </h4>
+           <img src="images/logo.png" alt="Knewton Alta Developer Banner">
               <p>
                 Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
               </p>
