--- a/seo-service.html
+++ b/seo-service.html
@@ -78,7 +78,7 @@
         <h1>
           SEO Service with High quality Backlinks will take you to Number One in Google
         </h1>
-        <p>Introducing a complete SEO service to boost your online presence effortlessly. Our package includes fixing website issues and building links to improve your search rankings. it may take about 2-3 months for the site to see a measurable rank increase and 4-5 months or even longer for more competitive keywords.</p>
+<p style="text-align: left;"> tIntroducing a complete SEO service to boost your online presence effortlessly. Our package includes fixing website issues and building links to improve your search rankings. it may take about 2-3 months for the site to see a measurable rank increase and 4-5 months or even longer for more competitive keywords.</p>
 
 <p>&nbsp;</p>
 
