--- a/seo-service.html
+++ b/seo-service.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-<meta name="keywords" content="SEO,Link Buildings, , Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
-  <meta name="description" content="Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
+<meta name="keywords" content="SEO,Monthly Seo Services, Seo Monthly Package, Link Building, On page Seo , Off Page Seo," />
+  <meta name="description" content="Boost your online visibility with our complete monthly SEO service! We'll fix website issues, build links, and create targeted content to improve your search rankings. Results typically show in just 2-3 months. Contact us now to discuss your business goals!" />
 
   <meta name="author" content="" />
 
@@ -78,36 +78,36 @@
         <h1>
           SEO Service with High quality Backlinks will take you to Number One in Google
         </h1>
-<p style="text-align: left;"> tIntroducing a complete SEO service to boost your online presence effortlessly. Our package includes fixing website issues and building links to improve your search rankings. it may take about 2-3 months for the site to see a measurable rank increase and 4-5 months or even longer for more competitive keywords.</p>
+<p style="text-align: left;">Introducing a complete SEO service to boost your online presence effortlessly. Our package includes fixing website issues and building glinks to improve your search rankings. it may take about 2-3 months for the site to see a measurable rank increase and 4-5 months or even longer for more competitive keywords.</p>
 
 <p>&nbsp;</p>
 
-<p>The steps I perform when you hire me for SEO:</p>
+<p>Here are the steps I take when you hire us for SEO Monthly Services:</p>
 
-<p>&nbsp;</p>
-
-<p>Here&#39;s what we do:</p>
+<p><strong>Here&#39;s what we do:</strong></p>
 
 <ul>
 	<li>Look at your site and competitors.</li>
 	<li>Find the best keywords for you.</li>
 	<li>Fix any website problems.</li>
-	<li>Get more links to your site.</li>
+	<li>Get more backlinks to your site.</li>
 </ul>
 
 <p>&nbsp;</p>
 
-<p>On-Page &amp; Off-Page SEO Both fixes your site and getting more links are important for better search rankings. We&#39;ll work closely with you to understand your business goals and target keywords.</p>
+<p>&nbsp;</p>
+
+<p>On-Page &amp; Off-Page SEO Both fixes your website and getting more links are important for better search rankings. We&#39;ll work closely with you to understand your business goals and target keywords.</p>
 
 <p>&nbsp;</p>
-ty
+
 <p>Contact us today for more details.&nbsp;</p>
 
 <p>&nbsp;</p>
 
 <p>We don&#39;t work with adult, gambling, or pharmacy sites.&nbsp;</p>
 
-
+<p>Let&#39;s improve your online visibility together</p>
 
         
        <div><span style="font-size: large;">Our Team Has Many SEO Experts</span></div><div><br /></div><p style="text-align: left;"><b>Our team has 12 years of experience in Web design and website optimization<br /></b>Over 70 percent of websites face the challenge of not being discoverable for their essential keywords on Google. As a dedicated search engine optimization (SEO) agency, we offer solutions to this issue. Many companies invest in visually appealing websites with a good look and feel, but unfortunately, potential customers struggle to find them. This discrepancy can be addressed differently. The responsibilities of an SEO agency are vast and comprehensive. Our services extend to companies, SMEs, and shops in East Flanders, West Flanders, Antwerp, Limburg, Brabant, Flemish Brabant, and other regions of Flanders. As specialists in link building, our objective is to leverage SEO optimization and strategic link building to position our clients' websites as high as possible in Google's organic search results.</p><div><br /></div><div><span style="font-size: large;"><b>How our agency tackles SEO</b></span></div><div><br /></div><div>We always work comprehensively in our SEO strategy for your website and company. Before we start, we first conduct a thorough SEO audit&nbsp; in which we:</div><div><br /></div><div>✦ Looking at the amount of content pages on your website</div><div>✦ Looking at the backlinks your website receives</div><div>✦ We create a content gap and backlink gap with your competition (= see how much 'behind' you are)</div><div>✦ The general structure and topic clustering of your website is examined</div><div>✦ The on-page SEO content scores are calculated.</div><div>✦ We look at User Experience SEO factors such as:</div><div><span>&nbsp;&nbsp; &nbsp;</span>Session duration</div><div><span>&nbsp;&nbsp; &nbsp;</span>Bounce rate</div><div><br /></div><div><span style="white-space: pre;">	</span></div><div><p style="text-align: left;">We create a large keyword plan according to a very specific method that we do not share publicly on this page – but believe us: our way of structuring is unique.</div><div>Finally, we draw up a real&nbsp; action plan that is subsequently implemented either by you or by us - or by dividing the work&nbsp; .&nbsp;</div><div><br /></div><div><br /></div><div><span style="font-size: large;"><b>Start your SEO Optimization With Three&nbsp; Steps.</b></span></div><div><br /></div><div><br /></div><div><br /></div><div><div><span style="font-size: medium;"><b>Step 1: Technical SEO</b></span></div><div><br /></div><div>Without a technically strong website, Google will never launch you to the first spot ! Your website must meet a lot of requirements before you can start ranking. A good SEO agency ensures that your website loads quickly and functions properly.</div><div><br /></div><div><span style="font-size: medium;"><b>Stap 2: On page SEO</b></span></div><div><br /></div><div>As an SEO company, we optimize your on-page SEO and look for the right keywords that help your customers search for your product.</div><div><br /></div><div>We also take into account the decision cycle of the target group and we try to be present at every step of that cycle. This is how we build authority and trust together with you. By scoring with the right keywords you immediately attract the right visitors to your website.</div><div><br /></div><div>We optimize your landing pages with compelling content and confirm your expertise in writing interesting blog posts . With convincing landing pages and interesting content you convert visitors into customers!</div><div><span style="font-size: medium;"><br /></span></div><div><span style="font-size: medium;"><b>Stap 3: Off page SEO</b></span></div><div><br /></div><div>By collecting valuable links to your website, Google will see your website as an authority in your sector.</div><div>The right backlinks strengthen your online position and ensure that you score better in the search engines.</div><div><br /></div><div><b>Start your SEO campaign with an SEO company!</b></div><div><br /></div><div>The SEO landscape changes from day to day and you have no control over the final results. It is not an exact science and hands-on expertise is therefore indispensable for a professional SEO agency .</div><div><br /></div><div>We deal with search engines and optimizing websites for findability on a daily basis.</div><div><br /></div><div>If you are looking for an SEO specialist who is aware of the best techniques in the constantly changing SEO world, then you have found us!</div></div><div><br /></div><div><br /></div>
