--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
- <meta name="keywords" content="SEO,Web development companies, , Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
-  <meta name="description" content="Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!
+ <meta name="keywords" content="SEO,Web development companies, Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
+  <meta name="description" content="Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!" />
   <meta name="author" content="" />
 
   <title>Web Development & SEO | Knewton Alta Developer</title>
@@ -137,10 +137,10 @@
                       Digital Marketing Experts
                     </h1>
                     <p>
-                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
+                      I'm a professional and certified digital marketing expert and I specialise in helping businesses to grow online. I have 18+ years B2B & B2C digital marketing experience across multiple industries, creating strategies and growth for worldwide clients that includes Subway, Fashion Go, Business Smart, Telecom2, and Access Commercial Finance. I can help to grow your brand online, increase leads and sales, and generate business growth faster! Partner with me today
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
                       </a>
                     </div>
@@ -207,9 +207,9 @@
                 On page SEO
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                I can help you with Keyword Research, On Page,Technical SEO.
               </p>
-              <a href="">
+              <a href="seo-service.html">
                 <span>
                   Read More
                 </span>
@@ -228,9 +228,9 @@
                 Online Marketing
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Search Marketing Consultancy to make your business TOP Ranked
               </p>
-              <a href="">
+              <a href="seo-service.html">
                 <span>
                   Read More
                 </span>
@@ -249,9 +249,9 @@
                 Email Marketing
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                6 Core E-commerce Flows + Lead Gen Pop-up
               </p>
-              <a href="">
+              <a href="contact.html">
                 <span>
                   Read More
                 </span>
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="seo-service.html">
           View More
         </a>
       </div>
@@ -302,63 +302,7 @@
 
   <!-- end about section -->
 
-  <!-- case section -->
-
-  <section class="case_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Our Case Studies
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/case-1.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Sit amet consectetur adipisicing elit
-              </h5>
-              <p>
-                Alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
-              </p>
-              <a href="">
-                <span>
-                  Read More
-                </span>
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/case-2.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Excepturi placeat nihil eos maxime
-              </h5>
-              <p>
-                Alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
-              </p>
-              <a href="">
-                <span>
-                  Read More
-                </span>
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end case section -->
+ 
 
   <!-- client section -->
   <section class="client_section ">
@@ -383,22 +327,18 @@
                     <div class="client_info">
                       <div class="client_name">
                         <h5>
-                          Morojink
+                          Monoj Kumar
                         </h5>
                         <h6>
-                          Customer
+                          Off-Page SEO
                         </h6>
                       </div>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
+                      I found this company through a Google search and was impressed by their services. 
+                      I decided to try them out, and they helped me develop a strategy that quickly boosted my rankings for several important phrases. 
+                      Thanks
                     </p>
                   </div>
                 </div>
@@ -418,22 +358,17 @@
                     <div class="client_info">
                       <div class="client_name">
                         <h5>
-                          Morojink
+                          Ahsan Habib
                         </h5>
                         <h6>
-                          Customer
+                          E-commerce SEO
                         </h6>
                       </div>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
+                      For a while, my company had trouble getting noticed online. But thanks to Developer Knewton, 
+                      more customers are visiting my e-commerce site. Their service is top-notch, and I'm thrilled with the outcome
                     </p>
                   </div>
                 </div>
@@ -453,22 +388,17 @@
                     <div class="client_info">
                       <div class="client_name">
                         <h5>
-                          Morojink
+                          David
                         </h5>
                         <h6>
-                          Customer
+                          SEO
                         </h6>
                       </div>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
+                      I would highly recommend Thrive Internet Marketing. They are great to work with.
+                      The traffic to our website has increased thanks to their SEO program.
                     </p>
                   </div>
                 </div>
