--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
  <meta name="keywords" content="SEO,Web development companies, Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
-  <meta name="description" content="Knewton Alta Developer is a Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!" />
+  <meta name="description" content="Web development company from USA offering the best Web development services & SEO at reasonable rates. Contact us to learn more!" />
   <meta name="author" content="" />
 
   <title>Web Development & SEO | Knewton Alta Developer</title>
@@ -88,7 +88,7 @@
                       If your business recognizes the importance of a strong online presence but lacks the internal resources or know-how to create a tailored solution, our team of skilled web developers is here to help. We understand that your focus is on managing your company, not on designing websites. Without an effective web platform, there's a risk of lagging behind competitors and missing out on valuable opportunities. Let us take care of your web development needs so you can stay ahead in the competitive landscape.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
                       </a>
                     </div>
@@ -114,7 +114,7 @@
                       Having your website rank high on the most popular search engines will drive your sales. We’ll create your website with all of the key features of SEO (Search Engine Optimization) such as lots of shareable content, right title tags, clickable headlines, subheadings, meta descriptions, and other elements that will push your website higher than that of the competition!
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
                       </a>
                     </div>
@@ -128,7 +128,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/slider-img.png" alt="SEO">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -166,8 +166,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Our Services
-          
+          Our Service
         </h2>
         <p>
           consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -184,11 +183,10 @@
                 Custom web application development
               </h5>
               <p>
-                We can provide you with custom online software in case you want something more than just a website. Our experts offer:
-
+                We use in-demand designs such as UX/UI to attract more customers to a business website. UX/UI Designs can present the details about a business or a product more to one’s liking
                      
               </p>
-              <a href="">
+              <a href="contact.html">
                 <span>
                   Read More
                 </span>
@@ -204,10 +202,12 @@
             </div>
             <div class="detail-box">
               <h5>
-                On page SEO
+                 SEO
               </h5>
               <p>
-                I can help you with Keyword Research, On Page,Technical SEO.
+               Search engine optimization is a cost-effective way to increase your sales. As you stay on Google’s first page, you get more organic traffic to your website and therefore generate more revenues.
+
+
               </p>
               <a href="seo-service.html">
                 <span>
