--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <h4>
               Subscribe
             </h4>
-            <form action="#">
+            <form action="mailto:darksoulinside8@gmail.com">
               <input type="text" placeholder="Enter email" />
               <button type="submit">
                 Subscribe
@@ -516,39 +516,24 @@
                 Address
               </h4>
               <div class="contact_link_box">
-                <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span>
-                    Location
-                  </span>
-                </a>
-                <a href="">
+                 <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     Call +01 1234567890
                   </span>
                 </a>
-                <a href="">
+                <a href="mailto:darksoulinside8@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    darksoulinside8@gmail.com
                   </span>
                 </a>
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a href="https://www.facebook.com/dev.knewton">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
+                  </a>
             </div>
           </div>
         </div>
@@ -562,7 +547,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://www.facebook.com/dev.knewton">Developer Knewton</a>
         </p>
       </div>
     </footer>
