--- a/service.html
+++ b/service.html
@@ -8,11 +8,11 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+ <meta name="keywords" content="SEO,Web development companies, Web solutions, Web app development , Link Building, On page Seo , Off Page Seo," />
+  <meta name="description" content=" Web development services & SEO at reasonable rates. Contact us to learn more!" />
   <meta name="author" content="" />
 
-  <title>Digian</title>
+  <title> Web Development Service & SEO | Knewton Alta Developer</title>
 
 
   <!-- bootstrap core css -->
@@ -94,7 +94,7 @@
                 Link Building
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Enhance your online presence with our expert Link Building service. Boost visibility and drive traffic effectively!,
               </p>
               <a href="">
                 <span>
@@ -115,7 +115,7 @@
                 On page SEO
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Elevate your website's performance with our On-Page SEO service. Optimize content, meta tags, and more for better rankings,
               </p>
               <a href="">
                 <span>
@@ -136,9 +136,10 @@
                 Online Marketing
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Maximize your digital reach with our Online Marketing service. Drive traffic, engage customers, and grow your brand online effectively!,
               </p>
               <a href="">
+                
                 <span>
                   Read More
                 </span>
@@ -157,7 +158,7 @@
                 Email Marketing
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                Reach your audience effectively with our Email Marketing service. Engage, inform, and convert subscribers with targeted campaigns,
               </p>
               <a href="">
                 <span>
@@ -169,12 +170,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-box">
-        <a href="">
-          View More
-        </a>
-      </div>
-    </div>
+       </div>
   </section>
   <!-- end service section -->
 
